--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.19",
+    "nanoid": "^3.1.10",
     "nodemon": "^2.0.4"
   }
 }
