--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "admin-bro": "^2.4.3",
     "admin-bro-expressjs": "^2.1.0",
     "admin-bro-mongoose": "^0.5.2",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
