Adjust for deploy

--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "Api for Umami web app",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "node",
