--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "express-formidable": "^1.2.0",
     "mongoose": "^5.9.19",
     "nanoid": "^3.1.10",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "swagger-ui-express": "^4.1.4"
   }
 }
