--- a/api/package.json
+++ b/api/package.json
@@ -18,12 +18,13 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^3.23.3",
-    "mongoose": "^5.9.19",
+    "mongoose": "^5.9.23",
     "nanoid": "^3.1.10",
     "nodemon": "^2.0.4",
     "pug": "^3.0.0",
