--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
   "author": "Emanuel Osorio",
   "license": "MIT",
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
@@ -24,9 +25,12 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^3.23.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.23",
     "nanoid": "^3.1.10",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pug": "^3.0.0",
     "swagger-ui-express": "^4.1.4"
   }
