--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+.vscode
+elementos_jp
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux
